--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,1 +1,34 @@
-<h1>Hello</h1>
+<section class="menu-container">
+  <section class="category">
+    <h2 class="category-title">Popular Items</h2>
+    <div class="category-item">
+      <div class="category-item-text">
+        <h3 class="category-item-title">42. Yellow Curry</h3>
+        <p class="category-item-description">
+          Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
+        </p>
+      </div>
+      <button class="category-item-button-price">$9.50</button>
+    </div>
+    <div class="category-item">
+      <div class="category-item-text">
+        <h3 class="category-item-title">42. Yellow Curry</h3>
+        <p class="category-item-description">
+          Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
+        </p>
+      </div>
+      <button class="category-item-button-price">$9.50</button>
+    </div>
+    <div class="category-item">
+      <div class="category-item-text">
+        <h3 class="category-item-title">42. Yellow Curry</h3>
+        <p class="category-item-description">
+          Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
+        </p>
+      </div>
+      <button class="category-item-button-price">$9.50</button>
+    </div>
+  </section>
+</section>
+<sidebar class="order-container">
+</sidebar>
