--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,24 +24,29 @@ body {
   display: inline-block;
   vertical-align: top;
   width: 65%;
+  border: 1px solid red;
 }
 
 .order-container {
   display: inline-block;
   vertical-align: top;
   float: right;
+  margin-right: 20px;
   width: 30%;
   border: 1px solid red;
 }
 
 .category {
-  margin-top: 20px;
   margin-left: 20px;
-  border: 1px solid blue;
+  border: 1px solid red;
 }
 
 .category-title {
   padding: 10px;
+}
+
+.category-dropdown {
+  float: right;
 }
 
 .category-item {
@@ -58,4 +63,39 @@ body {
   float: right;
   vertical-align: top;
   margin-top: 20px;
+}
+
+.order-header,
+.order-list,
+.order-item,
+.order-checkout {
+  border: 1px solid gray;
+}
+
+.order-header {
+  text-align: center;
+}
+
+.order-list-headings,
+.order-item {
+  padding: 10px;
+}
+
+.order-item-heading,
+.order-price-heading,
+.order-item-text,
+.order-item-price {
+  display: inline-block;
+  width: 60%;
+}
+
+.order-price-heading,
+.order-item-price {
+  width: 25%;
+}
+
+
+.order-checkout-button {
+  display: block;
+  margin: 0 auto;
 }
