--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,6 +1,6 @@
 <section class="menu-container">
   <section class="category">
-    <h2 class="category-title">Popular Items</h2>
+    <h2 class="category-title">Popular Items<i class="category-dropdown fa fa-sort-desc"></i></h2>
     <div class="category-item">
       <div class="category-item-text">
         <h3 class="category-item-title">42. Yellow Curry</h3>
@@ -31,4 +31,21 @@
   </section>
 </section>
 <sidebar class="order-container">
+  <header class="order-header">
+    <h2 class="order-heading">Your Order</h2>
+    <p class="order-restaurant">Angel Thai Cuisine</p>
+  </header>
+  <div class="order-list">
+    <div class="order-list-headings">
+      <span class="order-item-heading">Item</span>
+      <span class="order-price-heading">Price</span>
+    </div>
+    <div class="order-item">
+      <span class="order-item-text">70. Pad Thai</span>
+      <span class="order-item-price">$8.95</span>
+      <button class="order-item-button-remove"><i class="fa fa-times"></i></button>
+  </div>
+  <div class="order-checkout">
+    <button class="order-checkout-button">Proceed to Checkout</button>
+  </div>
 </sidebar>
