--- a/templates/menu.hbs
+++ b/templates/menu.hbs
@@ -1,4 +1,4 @@
-<section class="menu-container">
+<section class="menu">
   <section class="category">
     <h2 class="category-title">Popular Items<i class="category-dropdown fa fa-sort-desc"></i></h2>
     <div class="category-item">
@@ -30,22 +30,3 @@
     </div>
   </section>
 </section>
-<sidebar class="order-container">
-  <header class="order-header">
-    <h2 class="order-heading">Your Order</h2>
-    <p class="order-restaurant">Angel Thai Cuisine</p>
-  </header>
-  <div class="order-list">
-    <div class="order-list-headings">
-      <span class="order-item-heading">Item</span>
-      <span class="order-price-heading">Price</span>
-    </div>
-    <div class="order-item">
-      <span class="order-item-text">70. Pad Thai</span>
-      <span class="order-item-price">$8.95</span>
-      <button class="order-item-button-remove"><i class="fa fa-times"></i></button>
-  </div>
-  <div class="order-checkout">
-    <button class="order-checkout-button">Proceed to Checkout</button>
-  </div>
-</sidebar>
