--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,7 +27,7 @@ body {
   border: 1px solid red;
 }
 
-.order-container {
+.order {
   display: inline-block;
   vertical-align: top;
   float: right;
