--- a/templates/menu.hbs
+++ b/templates/menu.hbs
@@ -1,32 +1,34 @@
 <section class="menu">
-  <section class="category">
-    <h2 class="category-title">Popular Items<i class="category-dropdown fa fa-sort-desc"></i></h2>
-    <div class="category-item">
-      <div class="category-item-text">
-        <h3 class="category-item-title">42. Yellow Curry</h3>
-        <p class="category-item-description">
-          Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
-        </p>
+  {{#each this
+    <section class="category">
+      <h2 class="category-title">Popular Items<i class="category-dropdown fa fa-sort-desc"></i></h2>
+      <div class="category-item">
+        <div class="category-item-text">
+          <h3 class="category-item-title">42. Yellow Curry</h3>
+          <p class="category-item-description">
+            Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
+          </p>
+        </div>
+        <button class="category-item-button-price">$9.50</button>
       </div>
-      <button class="category-item-button-price">$9.50</button>
-    </div>
-    <div class="category-item">
-      <div class="category-item-text">
-        <h3 class="category-item-title">42. Yellow Curry</h3>
-        <p class="category-item-description">
-          Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
-        </p>
+      <div class="category-item">
+        <div class="category-item-text">
+          <h3 class="category-item-title">42. Yellow Curry</h3>
+          <p class="category-item-description">
+            Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
+          </p>
+        </div>
+        <button class="category-item-button-price">$9.50</button>
       </div>
-      <button class="category-item-button-price">$9.50</button>
-    </div>
-    <div class="category-item">
-      <div class="category-item-text">
-        <h3 class="category-item-title">42. Yellow Curry</h3>
-        <p class="category-item-description">
-          Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
-        </p>
+      <div class="category-item">
+        <div class="category-item-text">
+          <h3 class="category-item-title">42. Yellow Curry</h3>
+          <p class="category-item-description">
+            Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
+          </p>
+        </div>
+        <button class="category-item-button-price">$9.50</button>
       </div>
-      <button class="category-item-button-price">$9.50</button>
-    </div>
-  </section>
+    </section>
+  {{/each}}
 </section>
