Create static items.json file

--- a/templates/item.hbs
+++ b/templates/item.hbs
@@ -4,7 +4,7 @@
     Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
   </p>
   <div>
-    <button class="item-button-cancel">Cancel</button>
-    <button class="item-button-add">Add to Cart</button>
+    <button class="item-button-cancel button-primary">Cancel</button>
+    <button class="item-button-add button-primary">Add to Cart</button>
   </div>
 </section>
