--- a/templates/menu.hbs
+++ b/templates/menu.hbs
@@ -1,5 +1,4 @@
 <section class="menu">
-  {{#each this
     <section class="category">
       <h2 class="category-title">Popular Items<i class="category-dropdown fa fa-sort-desc"></i></h2>
       <div class="category-item">
@@ -9,7 +8,7 @@
             Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
           </p>
         </div>
-        <button class="category-item-button-price">$9.50</button>
+        <button class="category-item-button-price button-primary">$9.50</button>
       </div>
       <div class="category-item">
         <div class="category-item-text">
@@ -18,7 +17,7 @@
             Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
           </p>
         </div>
-        <button class="category-item-button-price">$9.50</button>
+        <button class="category-item-button-price button-primary">$9.50</button>
       </div>
       <div class="category-item">
         <div class="category-item-text">
@@ -27,8 +26,7 @@
             Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
           </p>
         </div>
-        <button class="category-item-button-price">$9.50</button>
+        <button class="category-item-button-price button-primary">$9.50</button>
       </div>
     </section>
-  {{/each}}
 </section>
