--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -1,7 +1,7 @@
 <sidebar class="order">
   <header class="order-header">
     <h2 class="order-heading">Your Order</h2>
-    <p class="order-restaurant">Angel Thai Cuisine</p>
+    <p class="order-restaurant">Majestic Thai Cuisine</p>
   </header>
   <div class="order-list">
     <div class="order-list-headings">
@@ -11,9 +11,9 @@
     <div class="order-item">
       <span class="order-item-text">70. Pad Thai</span>
       <span class="order-item-price">$8.95</span>
-      <button class="order-item-button-remove"><i class="fa fa-times"></i></button>
+      <span class="order-item-button-remove"><i class="fa fa-times"></i></span>
   </div>
   <div class="order-checkout">
-    <button class="order-checkout-button">Proceed to Checkout</button>
+    <button class="order-checkout-button button-primary">Proceed to Checkout</button>
   </div>
 </sidebar>
