Add dynamic data to DOM using templates Re-add float: right property to order container element

--- a/templates/menu.hbs
+++ b/templates/menu.hbs
@@ -1,32 +1,14 @@
-<section class="menu">
-    <section class="category">
-      <h2 class="category-title">Popular Items<i class="category-dropdown fa fa-sort-desc"></i></h2>
-      <div class="category-item">
-        <div class="category-item-text">
-          <h3 class="category-item-title">42. Yellow Curry</h3>
-          <p class="category-item-description">
-            Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
-          </p>
-        </div>
-        <button class="category-item-button-price button-primary">$9.50</button>
+{{#each this}}
+  <section class="category">
+    <h2 class="category-title">Popular Items<i class="category-dropdown fa fa-sort-desc"></i></h2>
+    <div class="category-item">
+      <div class="category-item-text">
+        <h3 class="category-item-title">{{number}}. {{name}}</h3>
+        <p class="category-item-description">
+          {{description}}
+        </p>
       </div>
-      <div class="category-item">
-        <div class="category-item-text">
-          <h3 class="category-item-title">42. Yellow Curry</h3>
-          <p class="category-item-description">
-            Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
-          </p>
-        </div>
-        <button class="category-item-button-price button-primary">$9.50</button>
-      </div>
-      <div class="category-item">
-        <div class="category-item-text">
-          <h3 class="category-item-title">42. Yellow Curry</h3>
-          <p class="category-item-description">
-            Encyclopaedia galactica great turbulent clouds, venture Euclid, cosmos birth billions upon billions citizens of distant epochs rich in mystery, the sky calls to us muse about worldlets.
-          </p>
-        </div>
-        <button class="category-item-button-price button-primary">$9.50</button>
-      </div>
-    </section>
-</section>
+      <button class="category-item-button-price button-primary">${{price}}</button>
+    </div>
+  </section>
+{{/each}}
