Make a view instance insert Items onto DOM instead of template

--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -1,3 +1,4 @@
+<sidebar class="order">
   <header class="order-header">
     <h2 class="order-heading">Your Order</h2>
     <p class="order-restaurant">Majestic Thai Cuisine</p>
@@ -15,3 +16,4 @@
   <div class="order-checkout">
     <button class="order-checkout-button button-primary">Proceed to Checkout</button>
   </div>
+</sidebar>
