Register Handlebars helper to display price to two decimal places

--- a/templates/categoryItem.hbs
+++ b/templates/categoryItem.hbs
@@ -4,4 +4,5 @@
     {{description}}
   </p>
 </div>
-<button class="category-item-button-price button-primary">${{price}}</button>
+<button class="category-item-button-price button-primary">${{priceFixed price}}
+</button>
