--- a/styles/main.scss
+++ b/styles/main.scss
@@ -48,6 +48,11 @@ body {
   padding: 10px;
 }
 
+.category-title {
+  margin-bottom: 0;
+  background: $light-gray;
+}
+
 .category-dropdown {
   float: right;
 }
