--- a/templates/category.hbs
+++ b/templates/category.hbs
@@ -1,3 +1,3 @@
 <h2 class="category-title">
-  {{category}}CATEGORY NAME<i class="category-dropdown fa fa-sort-desc"></i>
+  {{category}}<i class="category-dropdown fa fa-sort-desc"></i>
 </h2>
