--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -1,19 +1,19 @@
-<sidebar class="order">
-  <header class="order-header">
-    <h2 class="order-heading">Your Order</h2>
-    <p class="order-restaurant">Majestic Thai Cuisine</p>
-  </header>
-  <div class="order-list">
-    <div class="order-list-headings">
-      <span class="order-item-heading">Item</span>
-      <span class="order-price-heading">Price</span>
-    </div>
-    <div class="order-item">
-      <span class="order-item-text">70. Pad Thai</span>
-      <span class="order-item-price">$8.95</span>
-      <span class="order-item-button-remove"><i class="fa fa-times"></i></span>
+<header class="order-header">
+  <h2 class="order-heading">Your Order</h2>
+  <p class="order-restaurant">Majestic Thai Cuisine</p>
+</header>
+<div class="order-list">
+  <div class="order-list-headings">
+    <span class="order-item-heading">Item</span>
+    <span class="order-price-heading">Price</span>
   </div>
-  <div class="order-checkout">
-    <button class="order-checkout-button button-primary">Proceed to Checkout</button>
-  </div>
-</sidebar>
+  {{#each this}}
+  <div class="order-item">
+    <span class="order-item-text">{{number}}. {{name}}</span>
+    <span class="order-item-price">${{price}}</span>
+    <span class="order-item-button-remove"><i class="fa fa-times"></i></span>
+  {{/each}}
+</div>
+<div class="order-checkout">
+  <button class="order-checkout-button button-primary">Proceed to Checkout</button>
+</div>
