Add priceFixed helper to order template to view prices w/ two decimal places

--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -10,7 +10,7 @@
   {{#each this}}
   <div class="order-item">
     <span class="order-item-text">{{number}}. {{name}}</span>
-    <span class="order-item-price">${{price}}</span>
+    <span class="order-item-price">${{priceFixed price}}</span>
     <span class="order-item-button-remove"><i class="fa fa-times"></i></span>
   {{/each}}
 </div>
