Adjust CSS styling for order-subtotal class

--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -8,6 +8,10 @@
     <span class="order-price-heading">Price</span>
   </div>
 </div>
+<div class="order-subtotal">
+  <span class="order-item-text">Subtotal</span>
+  <span class="order-item-price">$ 25.00</span>
+</div>
 <div class="order-checkout">
   <button class="order-checkout-button button-primary">Proceed to Checkout</button>
 </div>
