--- a/styles/main.scss
+++ b/styles/main.scss
@@ -85,6 +85,7 @@ body {
 .order-header,
 .order-list,
 .order-item,
+.order-subtotal,
 .order-checkout {
   border: 1px solid gray;
 }
@@ -95,6 +96,7 @@ body {
 
 .order-list-headings,
 .order-item,
+.order-subtotal,
 .order-checkout {
   padding: 10px;
 }
