Pass in order model's subtotal attribute as context for orderView Handlebars template to display subtotal to page

--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -10,7 +10,7 @@
 </div>
 <div class="order-subtotal">
   <span class="order-item-text">Subtotal</span>
-  <span class="order-item-price">$ TEST</span>
+  <span class="order-item-price">${{subtotal}}</span>
 </div>
 <div class="order-checkout">
   <button class="order-checkout-button button-primary">Proceed to Checkout</button>
