Add toggleDropdown event handler to CategoryView constructor to toggle display of items for each category Needs refactoring - currently toggles all items simultaneously instead of only those specific to the view where toggle was clicked

--- a/templates/category.hbs
+++ b/templates/category.hbs
@@ -1,3 +1,7 @@
 <h2 class="category-title">
   {{category}}<i class="category-dropdown fa fa-sort-desc"></i>
 </h2>
+{{#unless isHidden}}
+  <div class="category-item-container">
+  </div>
+{{/unless}}
