Refactor CategoryVm implementation to ensure that only the category items whose dropdown is clicked toggle isHidden

--- a/templates/category.hbs
+++ b/templates/category.hbs
@@ -2,6 +2,6 @@
   {{category}}<i class="category-dropdown fa fa-sort-desc"></i>
 </h2>
 {{#unless isHidden}}
-  <div class="category-item-container">
+  <div class="container-item-container">
   </div>
 {{/unless}}
