--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,6 +14,12 @@ $very-light-gray: #fafafa;
 $base-font-color: $dark-gray;
 $base-background-color: $very-light-gray;
 
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: $base-font-family;
   background-color: $base-background-color;
