Upload new Item class to Parse and change Items collection URL to point to it Change restaurant name in Order view

--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -1,6 +1,6 @@
 <header class="order-header">
   <h2 class="order-heading">Your Order</h2>
-  <p class="order-restaurant">Majestic Thai Cuisine</p>
+  <p class="order-restaurant">Total Fusion Cafe</p>
 </header>
 <div class="order-list">
   <div class="order-list-headings">
