Define ItemShowView constructor and template and add dynamic URL route to router Index route still requires defining default behavior

--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -1,6 +1,6 @@
 <header class="order-header">
-  <h2 class="order-heading">Your Order</h2>
-  <p class="order-restaurant">Total Fusion Cafe</p>
+  <h2 class="order-restaurant">Total Fusion Cafe</h2>
+  <h4 class="order-heading">Your Order</h4>
 </header>
 <div class="order-list">
   <div class="order-list-headings">
