--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,7 +26,17 @@ body {
   color: $base-font-color;
 }
 
-.menu {
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+a:hover {
+  color: inherit;
+}
+
+.menu,
+.item {
   display: inline-block;
   vertical-align: top;
   width: 65%;
@@ -63,7 +73,8 @@ body {
   float: right;
 }
 
-.category-item {
+.category-item
+{
   border: 1px solid black;
   padding: 10px;
 }
