Add anchor element URL for cancel button in ItemShowView template to redirect user to index URL

--- a/templates/itemShow.hbs
+++ b/templates/itemShow.hbs
@@ -1,6 +1,8 @@
 <h2 class="item-title">{{name}}</h2>
 <p class="item-description">{{description}}</p>
 <div class="item-add-container">
-  <button class="item-button-cancel">Cancel</button>
+  <a href="#">
+    <button class="item-button-cancel">Cancel</button>
+  </a>
   <button class="item-button-add">Add to Cart</button>
 </div>
