Change CSS styling for add/cancel button w/ class change Change button text

--- a/templates/itemShow.hbs
+++ b/templates/itemShow.hbs
@@ -1,8 +1,8 @@
 <h2 class="item-title">{{name}}</h2>
-<p class="item-description">{{description}}</p>
+<p class="item-description">{{description}} - ${{priceFixed price}} each</p>
 <div class="item-add-container">
   <a href="#">
-    <button class="item-button-cancel">Cancel</button>
+    <button class="item-button-cancel button-primary">Back to Menu</button>
   </a>
-  <button class="item-button-add">Add to Cart</button>
+  <button class="item-button-add button-primary">Add to Cart</button>
 </div>
