--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -13,5 +13,5 @@
   <span class="order-item-price">${{subtotal}}</span>
 </div>
 <div class="order-checkout">
-  <button class="order-checkout-button button-primary">Proceed to Checkout</button>
+  <button class="order-checkout-button button-primary">Place Order</button>
 </div>
