--- a/templates/itemShow.hbs
+++ b/templates/itemShow.hbs
@@ -1,5 +1,6 @@
 <h2 class="item-title">{{name}}</h2>
-<p class="item-description">{{description}} - ${{priceFixed price}} each</p>
+<h3 class="item-description">{{description}}</h3>
+<h4 class="item-description">$ {{priceFixed price}} each</h4>
 <div class="item-add-container">
   <a href="#">
     <button class="item-button-cancel button-primary">Back to Menu</button>
