--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -12,6 +12,14 @@
   <span class="order-item-text">Subtotal</span>
   <span class="order-item-price">${{subtotal}}</span>
 </div>
+<div class="order-tax">
+  <span class="order-item-text">Tax</span>
+  <span class="order-item-price">${{tax}}</span>
+</div>
+<div class="order-total">
+  <span class="order-item-text">Total</span>
+  <span class="order-item-price">${{total}}</span>
+</div>
 <div class="order-checkout">
-  <button class="order-checkout-button button-primary">Place Order</button>
+  <button class="order-checkout-button button-primary">Checkout</button>
 </div>
