Change .order to position:fixed and right: 0; Remove float: right CSS property

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -45,8 +45,9 @@ a:hover {
 }
 
 .order {
+  position: fixed;
+  right: 0;
   display: inline-block;
-  float: right;
   vertical-align: top;
   margin-right: 20px;
   width: 30%;
