--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -20,6 +20,10 @@
   <span class="order-item-text">Total</span>
   <span class="order-item-price">${{total}}</span>
 </div>
+<div class="order-name">
+  <input class="order-name-input" type="text" name="ordername" placeholder="Enter your name before placing order.">
+</div>
+</div>
 <div class="order-checkout">
-  <button class="order-checkout-button button-primary">Checkout</button>
+  <button class="order-checkout-button button-primary">Place order!</button>
 </div>
