--- a/templates/category.hbs
+++ b/templates/category.hbs
@@ -1,5 +1,5 @@
 <h2 class="category-title">
-  {{category}}<i class="category-dropdown fa fa-sort-desc"></i>
+  {{category}}<i class="category-dropdown fa fa-sort-desc fa-lg"></i>
 </h2>
 {{#unless isHidden}}
   <div class="container-item-container">
