Adjust color of restaurant title w/ CSS

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -124,6 +124,11 @@ a:hover {
   text-align: center;
 }
 
+.order-restaurant {
+  color: #C02100;
+  font-weight: bolder;
+}
+
 .order-header-logo {
   color: red;
 }
