--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,6 +14,8 @@ $very-light-gray: #fafafa;
 $base-font-color: #2A0B05;
 $base-background-color: #FFDBD3;
 
+// Palleton URL http://paletton.com/#uid=7080u0ksayjeGZ15vzwU4o4sw5k
+
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -55,12 +57,12 @@ a:hover {
 }
 
 .category {
-/*   border: 1px solid red;
- */}
+  margin: 10px;
+  border: 1px solid #FF461F;
+}
 
 .category-title,
 .item-title {
-  border-bottom: 1px solid #FF461F;
   padding: 10px;
 }
 
@@ -71,6 +73,8 @@ a:hover {
 }
 
 .category-dropdown {
+  position: relative;
+  top: -5px;
   float: right;
   color: #C02100;
 }
@@ -78,6 +82,10 @@ a:hover {
 .category-item {
   padding: 10px;
   border-bottom: 1px solid #FF461F;
+}
+
+.category-item:last-child {
+  border-bottom: none;
 }
 
 .category-item-text {
