Define AdminOrderItemView constructor and template Create adminOrderItemView instance in AdminOrderView Adjust minor CSS styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -134,6 +134,10 @@ a:hover {
   text-align: center;
 }
 
+.order-name {
+  background-color: #FF461F;
+}
+
 .order-restaurant {
   color: #C02100;
   font-weight: bolder;
