--- a/templates/adminOrderItem.hbs
+++ b/templates/adminOrderItem.hbs
@@ -1,2 +1,2 @@
   <span class="order-item-text">{{number}}. {{name}}</span>
-  <span class="order-item-price">${{price}}</span>
+  <span class="order-item-price">${{priceFixed price}}</span>
