--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -21,7 +21,7 @@
   <span class="order-item-text">Total</span>
   <span class="order-item-price">${{total}}</span>
 </div>
-<div class="order-name">
+<div class="order-name-container">
   <input class="order-name-input" type="text" name="ordername" placeholder="Enter your name before placing order.">
 </div>
 </div>
