--- a/styles/main.scss
+++ b/styles/main.scss
@@ -56,6 +56,7 @@ a:hover {
   right: 0;
   display: inline-block;
   vertical-align: top;
+  margin-top: 10px;
   margin-right: 20px;
   width: 30%;
   border: 1px solid $base-font-color;
