--- a/templates/itemShow.hbs
+++ b/templates/itemShow.hbs
@@ -1,4 +1,4 @@
-<h2 class="item-title">{{name}}</h2>
+<h2 class="item-show-title">{{name}}</h2>
 <h3 class="item-description">{{description}}</h3>
 <h4 class="item-description">$ {{priceFixed price}} each</h4>
 <div class="item-add-container">
