--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -1,5 +1,5 @@
 <header class="order-header">
-  <img src="55.png" class="order-header-logo">
+  <img class="logo" src="55.png" class="order-header-logo">
   <h2 class="order-restaurant">Total Fusion Cafe</h2>
   <h4 class="order-heading">Your Order</h4>
 </header>
