--- a/templates/order.hbs
+++ b/templates/order.hbs
@@ -22,7 +22,7 @@
   <span class="order-item-price">${{total}}</span>
 </div>
 <div class="order-name-container">
-  <input class="order-name-input" type="text" name="ordername" placeholder="Enter your name before placing order.">
+  <input class="order-name-input" type="text" name="ordername" placeholder="Enter your name.">
 </div>
 </div>
 <div class="order-checkout">
