Change items-show-title bar background color to match styling on rest of page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -95,7 +95,7 @@ a:hover {
   padding: 10px;
   border-bottom: 1px solid #771601;
   text-align: center;
-  background-color: #FF9E8A;
+  background-color: #F89C51;
 }
 
 .category-item:last-child {
