--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,6 @@
-@import '../bower_components/bourbon/app/assets/stylesheets/bourbon';
-@import '../bower_components/neat/app/assets/stylesheets/neat';
-
 // Typography
-$base-font-family: $helvetica;
+$base-font-family: 'Helvetica Neue', "Helvetica", "Roboto", "Arial", sans-serif;
+$brand-font: 'Kaushan Script', cursive;
 
 // Colors
 $blue: #477dca;
@@ -160,7 +158,7 @@ a:hover {
 
 .order-restaurant {
   color: #C02100;
-  font-weight: bolder;
+  font-family: $brand-font;
 }
 
 .order-header-logo {
