Add left and right padding to restaurant name

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -159,6 +159,8 @@ a:hover {
 .order-restaurant {
   color: #C02100;
   font-family: $brand-font;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .order-header-logo {
