--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,11 +23,11 @@ $base-background-color: #FFDBD3;
 body {
   font-family: $base-font-family;
 /*   background-color: $base-background-color; */
-background: -webkit-linear-gradient(90deg, #FF512F 10%, #F09819 90%); /* Chrome 10+, Saf5.1+ */
-background:    -moz-linear-gradient(90deg, #FF512F 10%, #F09819 90%); /* FF3.6+ */
-background:     -ms-linear-gradient(90deg, #FF512F 10%, #F09819 90%); /* IE10 */
-background:      -o-linear-gradient(90deg, #FF512F 10%, #F09819 90%); /* Opera 11.10+ */
-background:         linear-gradient(90deg, #FF512F 10%, #F09819 90%); /* W3C */
+background: -webkit-linear-gradient(90deg, #F09819 10%, #FF512F 90%); /* Chrome 10+, Saf5.1+ */
+background:    -moz-linear-gradient(90deg, #F09819 10%, #FF512F 90%); /* FF3.6+ */
+background:     -ms-linear-gradient(90deg, #F09819 10%, #FF512F 90%); /* IE10 */
+background:      -o-linear-gradient(90deg, #F09819 10%, #FF512F 90%); /* Opera 11.10+ */
+background:         linear-gradient(90deg, #F09819 10%, #FF512F 90%); /* W3C */
   color: $base-font-color;
 }
 
